Add valid destination feature
